get all data to html claim manager

--- a/springboot/claim/claim/src/main/resources/templates/cms/claim-manager.html
+++ b/springboot/claim/claim/src/main/resources/templates/cms/claim-manager.html
@@ -195,6 +195,6 @@
         searchButton.addEventListener('click', filterTable);
     });
 </script>
-
+<script src="/js/cms/claim-manger.js"></script>
 </body>
 </html>
