hoàn thiện chức năng tạo mới claim

--- a/springboot/claim/claim/src/main/resources/templates/cms/claim-manager.html
+++ b/springboot/claim/claim/src/main/resources/templates/cms/claim-manager.html
@@ -52,6 +52,21 @@
                                    placeholder="Nhập mã yêu cầu">
                         </div>
                         <div class="col-md-3">
+                            <label for="search-customer-name">Tên khách hàng</label>
+                            <input type="text" id="search-customer-name" class="form-control"
+                                   placeholder="Nhập tên khách hàng">
+                        </div>
+                        <div class="col-md-3">
+                            <label for="search-customer-mail">Email khách hàng</label>
+                            <input type="text" id="search-customer-mail" class="form-control"
+                                   placeholder="Nhập tên khách hàng">
+                        </div>
+                        <div class="col-md-3">
+                            <label for="search-product-name">Tên sản phẩm</label>
+                            <input type="text" id="search-product-name" class="form-control"
+                                   placeholder="Nhập tên khách hàng">
+                        </div>
+                        <div class="col-md-3">
                             <label for="from-date">Từ ngày</label>
                             <input type="date" id="from-date" class="form-control">
                         </div>
@@ -84,6 +99,8 @@
                                     <th><input type="checkbox" id="selectAll"></th>
                                     <th>Mã yêu cầu bồi thường</th>
                                     <th>Tên khách hàng</th>
+                                    <th>Số điện thoại khách hàng</th>
+                                    <th>Email khách hàng</th>
                                     <th>Tên sản phẩm bảo hiểm</th>
                                     <th>Ngày gửi yêu cầu</th>
                                     <th>Mô tả yêu cầu</th>
