list user with filter

--- a/springboot/claim/claim/src/main/resources/templates/cms/common/sidebar.html
+++ b/springboot/claim/claim/src/main/resources/templates/cms/common/sidebar.html
@@ -38,9 +38,9 @@
                 </a>
             </li>
             <li class="menu-item">
-                <a href="tables-basic.html" class="menu-link">
+                <a href="http://localhost:8081/cms/user-manager" class="menu-link">
                     <i class="menu-icon tf-icons bx bx-shield"></i>
-                    <div data-i18n="Underwriting">Bảo lãnh</div>
+                    <div data-i18n="Claims">Quản lý người dùng</div>
                 </a>
             </li>
             <li class="menu-item">
