api create user

--- a/springboot/claim/claim/src/main/resources/templates/cms/user/create-user.html
+++ b/springboot/claim/claim/src/main/resources/templates/cms/user/create-user.html
@@ -75,6 +75,10 @@
                                                 <input class="form-control" type="email" id="email" name="email"  placeholder="email@example.com" />
                                             </div>
                                             <div class="mb-3 col-md-6">
+                                                <label for="age" class="form-label">Age</label>
+                                                <input class="form-control" type="number" id="age" name="age"  placeholder="email@example.com" />
+                                            </div>
+                                            <div class="mb-3 col-md-6">
                                                 <label for="firstName" class="form-label">First Name</label>
                                                 <input class="form-control" type="text" id="firstName" name="firstName" autofocus />
                                             </div>
